<resources>
    <string name="app_name">ShoeStore</string>
    <string name="shoe_store_name">Antique Shoe Store</string>
    <string name="username_text">Username</string>
    <string name="username_hint">BigPoppa</string>
    <string name="example_email">bigpoppa@gmail.com</string>
    <string name="password_text">Password</string>
    <string name="email_text">Email</string>
    <string name="password_hint">******</string>
    <string name="register_text">Register</string>
    <string name="login_to_existing_account_text">Login to Existing Account</string>
    <string name="example_username">Example_Username</string>
    <string name="example_email_text">example_email@gmail.com</string>
    <string name="example_password">password</string>
    <string name="logging_you_in_text">Logging you in…</string>
    <string name="login_complete_text">Login complete!</string>
    <string name="welcome_text">Welcome!</string>
    <string name="welcome_bottom_text">Thank you for signing up, we regularly post new additions! Feel free to inquire about anything you see!</string>
    <string name="next_text">Next</string>
    <string name="logout_text">Logout</string>
    <string name="shoe_list_text">Shoe List</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="shoe_listings_text">Shoe Listings</string>
    <string name="instruction_text_1">Tap here to add a new shoe listing!</string>
    <string name="instruction_text_2">(For now, it\'ll take you to the shoe listings)</string>
    <string name="shoe_details_text">Shoe Details</string>
    <string name="add_shoe_text">Add New Shoe</string>
    <string name="viewpager_imageview_contentdescription">Image in viewpager, can scroll left or right</string>
    <string name="shoe_title_text">Shoe Title</string>
    <string name="shoe_size_text">Shoe Size</string>
    <string name="shoe_company_text">Shoe Company</string>
    <string name="shoe_description_text">Shoe Description</string>
    <string name="image_url_1_text">Image URL #1</string>
    <string name="image_url_2_text">Image URL #2</string>
    <string name="image_url_3_text">Image URL #3</string>
    <string name="save_shoe_details_text">Save Shoe Details</string>
    <string name="cancel_text">Cancel</string>
    <string name="example_image_url_text">https:// ..... .jpg</string>
</resources>
