<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">


    <!-- Data and Variable declaration to reduce boilerplate in the Fragment's code -->
    <data>
        <variable
            name="fragment"
            type="com.udacity.shoestore.ui.fragments.ShoeDetailFragment" />

        <variable
            name="viewmodel"
            type="com.udacity.shoestore.ui.fragments.view_models.ShoeListViewModel" />

        <variable
            name="entity"
            type="com.udacity.shoestore.db.entities.ShoeEntity" />
    </data>

    <!-- Using ScrollView to allow the screen to show the lower EditTexts while editing,
     without the keyboard being in the way -->

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="8dp"
        tools:background="@color/background_color">

        <!-- Using ConstraintLayout as our EditTexts will scale dynamically to content inside them,
         and I've chained the Shoe Size and Shoe Company views -->

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ProgressBar
                android:id="@+id/shoe_detail_progress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="16dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:visibility="gone"
                tools:visibility="visible"/>

            <TextView
                android:id="@+id/textView5"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:text="@string/shoe_title_text"
                android:textColor="@android:color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/title_edit_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:backgroundTint="@color/darkGray"
                android:hint="Shoe Title Here"
                android:inputType="textMultiLine|textCapWords"
                android:maxLines="3"
                android:minLines="1"
                android:text="@={entity.name}"
                android:textColor="@android:color/white"
                android:textColorHint="@android:color/darker_gray"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textView5" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:gravity="center"
                android:text="@string/shoe_size_text"
                android:textColor="@android:color/white"
                app:layout_constraintEnd_toStartOf="@+id/textView7"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/title_edit_text" />

            <EditText
                android:id="@+id/shoe_size_edit_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="4dp"
                android:backgroundTint="@color/darkGray"
                android:gravity="center"
                android:inputType="numberDecimal"
                android:singleLine="true"
                android:textColor="@android:color/white"
                android:text="@={`` + entity.size}"
                app:layout_constraintEnd_toStartOf="@+id/company_edit_text"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textView6"
                android:textColorHint="@android:color/darker_gray"
                android:hint="9.5" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:gravity="center"
                android:text="@string/shoe_company_text"
                android:textColor="@android:color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/textView6"
                app:layout_constraintTop_toBottomOf="@id/title_edit_text" />

            <EditText
                android:id="@+id/company_edit_text"
                style="@style/Widget.AppCompat.EditText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_marginEnd="8dp"
                android:backgroundTint="@color/darkGray"
                android:gravity="center"
                android:hint="Company"
                android:text="@={entity.company}"
                android:inputType="textShortMessage|textCapSentences"
                android:singleLine="true"
                android:textColor="@android:color/white"
                android:textColorHint="@android:color/darker_gray"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/shoe_size_edit_text"
                app:layout_constraintTop_toBottomOf="@id/textView7" />

            <TextView
                android:id="@+id/textView8"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:text="@string/shoe_description_text"
                android:textColor="@android:color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/shoe_size_edit_text" />

            <EditText
                android:id="@+id/description_edit_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:hint="Shoe description here"
                android:backgroundTint="@color/darkGray"
                android:inputType="textLongMessage|textMultiLine|textCapSentences"
                android:maxLines="10"
                android:minLines="5"
                android:text="@={entity.description}"
                android:textColor="@android:color/white"
                android:textColorHint="@android:color/darker_gray"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textView8" />


            <TextView
                android:id="@+id/textView9"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="8dp"
                android:text="@string/image_url_1_text"
                android:textColor="@android:color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/description_edit_text" />

            <EditText
                android:id="@+id/url_et_1"
                style="@android:style/Widget.Material.EditText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:backgroundTint="@color/darkGray"
                android:hint="@string/example_image_url_text"
                android:inputType="textUri"
                android:textColor="@android:color/holo_blue_bright"
                android:textColorHint="@android:color/darker_gray"
                android:text="@={entity.images[0]}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView9" />

            <TextView
                android:id="@+id/textView10"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="8dp"
                android:text="@string/image_url_2_text"
                android:textColor="@android:color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/url_et_1" />

            <EditText
                android:id="@+id/url_et_2"
                style="@android:style/Widget.Material.EditText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:backgroundTint="@color/darkGray"
                android:hint="@string/example_image_url_text"
                android:text="@={entity.images[1]}"
                android:inputType="textUri"
                android:textColor="@android:color/holo_blue_bright"
                android:textColorHint="@android:color/darker_gray"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView10" />

            <TextView
                android:id="@+id/textView11"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="8dp"
                android:text="@string/image_url_3_text"
                android:textColor="@android:color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/url_et_2" />

            <EditText
                android:id="@+id/url_et_3"
                style="@android:style/Widget.Material.EditText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:backgroundTint="@color/darkGray"
                android:hint="@string/example_image_url_text"
                android:text="@={entity.images[2]}"
                android:inputType="textUri"
                android:textColor="@android:color/holo_blue_bright"
                android:textColorHint="@android:color/darker_gray"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView11" />

            <Button
                android:id="@+id/save_shoe_button"
                style="@style/ButtonPrimary"
                android:text="@string/save_shoe_details_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginTop="24dp"
                android:onClick="@{(view) -> fragment.saveShoe(entity)}"
                app:layout_constraintTop_toBottomOf="@id/url_et_3"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <Button
                android:id="@+id/cancel_button"
                style="@style/ButtonAccent"
                android:text="@string/cancel_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginTop="24dp"
                android:onClick="@{() -> viewmodel.saveFinished()}"
                app:layout_constraintTop_toBottomOf="@id/save_shoe_button"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</layout>